fix(loader): overflow-x

--- a/src/widgets/layouts/layout/ui/layout.module.css
+++ b/src/widgets/layouts/layout/ui/layout.module.css
@@ -14,6 +14,9 @@
 .layoutContainer main {
   margin:0 auto;
 }
+.layoutContainer:has(main > nav + section) {
+  overflow-x:hidden;
+}
 @media screen and (max-width:768px) {
   .layoutContainer header,
   .layoutContainer footer {
